Fix overflow auto

--- a/src/Resources/public/src/scss/c4gForum.scss
+++ b/src/Resources/public/src/scss/c4gForum.scss
@@ -38,7 +38,7 @@
 }
 
 .c4gForumBoxes {
-  overflow: auto;
+  overflow: inherit;
 }
 
 .c4gForumBox {
